mrtk-docs-old/2.5.0/features/Experimental/README.md
---
title: README_MRTK_Documentation
description: MRTK 使用者入門檔頁面
author: CDiaz-MS
ms.author: cadia
ms.date: 01/12/2021
ms.localizationpriority: high
keywords: Unity、HoloLens、HoloLens 2、Mixed Reality、開發、MRTK、
ms.openlocfilehash: e7e17bce16a96c6cb6a9c71224ae57ae64f4030f
ms.sourcegitcommit: 97815006c09be0a43b3d9b33c1674150cdfecf2b
ms.translationtype: MT
ms.contentlocale: zh-TW
ms.lasthandoff: 03/03/2021
ms.locfileid: "101780631"
---
# <a name="what-is-the-mixed-reality-toolkit"></a><span data-ttu-id="3557b-104">何謂混合現實工具組</span><span class="sxs-lookup"><span data-stu-id="3557b-104">What is the Mixed Reality Toolkit</span></span>

![混合實境工具組](../Images/Logo_MRTK_Unity_Banner.png)

<span data-ttu-id="3557b-106">MRTK-Unity 是由 Microsoft 所推動的專案，其提供一組元件與功能，可用來加快 Unity 中的跨平台 MR 應用程式開發。</span><span class="sxs-lookup"><span data-stu-id="3557b-106">MRTK-Unity is a Microsoft-driven project that provides a set of components and features, used to accelerate cross-platform MR app development in Unity.</span></span> <span data-ttu-id="3557b-107">以下是其中的一些功能：</span><span class="sxs-lookup"><span data-stu-id="3557b-107">Here are some of its functions:</span></span>

* <span data-ttu-id="3557b-108">提供 **空間互動和 UI 的跨平臺輸入系統和建立區塊**。</span><span class="sxs-lookup"><span data-stu-id="3557b-108">Provides the **cross-platform input system and building blocks for spatial interactions and UI**.</span></span>
* <span data-ttu-id="3557b-109">透過可讓您立即查看變更的編輯器內模擬，讓您能夠 **快速建立原型** 。</span><span class="sxs-lookup"><span data-stu-id="3557b-109">Enables **rapid prototyping** via in-editor simulation that allows you to see changes immediately.</span></span>
* <span data-ttu-id="3557b-110">以可擴充的 **架構** 運作，讓開發人員能夠交換核心元件。</span><span class="sxs-lookup"><span data-stu-id="3557b-110">Operates as an **extensible framework** that provides developers the ability to swap out core components.</span></span>
* <span data-ttu-id="3557b-111">**支援多種平臺**，包括</span><span class="sxs-lookup"><span data-stu-id="3557b-111">**Supports a wide range of platforms**, including</span></span>
  * <span data-ttu-id="3557b-112">Microsoft HoloLens</span><span class="sxs-lookup"><span data-stu-id="3557b-112">Microsoft HoloLens</span></span>
  * <span data-ttu-id="3557b-113">Microsoft HoloLens 2</span><span class="sxs-lookup"><span data-stu-id="3557b-113">Microsoft HoloLens 2</span></span>
  * <span data-ttu-id="3557b-114">Windows Mixed Reality 頭戴式裝置</span><span class="sxs-lookup"><span data-stu-id="3557b-114">Windows Mixed Reality headsets</span></span>
  * <span data-ttu-id="3557b-115">OpenVR 頭戴式裝置 (HTC Vive / Oculus Rift)</span><span class="sxs-lookup"><span data-stu-id="3557b-115">OpenVR headsets (HTC Vive / Oculus Rift)</span></span>
  * <span data-ttu-id="3557b-116">Ultraleap 手部追蹤</span><span class="sxs-lookup"><span data-stu-id="3557b-116">Ultraleap Hand Tracking</span></span>
  * <span data-ttu-id="3557b-117">IOS 和 Android 等行動裝置</span><span class="sxs-lookup"><span data-stu-id="3557b-117">Mobile devices such as iOS and Android</span></span>

# <a name="getting-started-with-mrtk"></a><span data-ttu-id="3557b-118">開始使用 MRTK</span><span class="sxs-lookup"><span data-stu-id="3557b-118">Getting started with MRTK</span></span>

<span data-ttu-id="3557b-119">如果您不熟悉 Unity 中的 MRTK 或混合現實開發， **我們建議您** 從 Microsoft 檔中的 [unity 開發旅程](https://docs.microsoft.com/windows/mixed-reality/unity-development-overview?tabs=mrtk%2Chl2) 開始著手。Unity 開發旅程是特別量身打造的，可透過安裝、核心概念和 MRTK 的使用方式來引導新的開發人員。</span><span class="sxs-lookup"><span data-stu-id="3557b-119">If you're new to MRTK or Mixed Reality development in Unity, **we recommend you start at the beginning of our** [Unity development journey](https://docs.microsoft.com/windows/mixed-reality/unity-development-overview?tabs=mrtk%2Chl2) in the Microsoft Docs. The Unity development journey is specifically tailored to walk new developers through the installation, core concepts, and usage of MRTK.</span></span>

| <span data-ttu-id="3557b-120">重要： Unity 開發旅程目前使用 **MRTK 版本 2.4.0** 和 **Unity 2019.4**。</span><span class="sxs-lookup"><span data-stu-id="3557b-120">IMPORTANT: The Unity development journey currently uses **MRTK version 2.4.0** and **Unity 2019.4**.</span></span> |
| --- |

<span data-ttu-id="3557b-121">如果您是有經驗的混合現實或 MRTK 開發人員，請參閱下一節中的連結，以取得最新的套件和版本資訊。</span><span class="sxs-lookup"><span data-stu-id="3557b-121">If you're an experienced Mixed Reality or MRTK developer, check the links in the next section for the newest packages and release notes.</span></span>

# <a name="documentation"></a><span data-ttu-id="3557b-122">文件</span><span class="sxs-lookup"><span data-stu-id="3557b-122">Documentation</span></span>

| <span data-ttu-id="3557b-123">[![版本資訊](../Images/MRTK_Icon_ReleaseNotes.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../ReleaseNotes.html)</span><span class="sxs-lookup"><span data-stu-id="3557b-123">[![Release notes](../Images/MRTK_Icon_ReleaseNotes.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../ReleaseNotes.html)</span></span><br/>[<span data-ttu-id="3557b-124">版本資訊</span><span class="sxs-lookup"><span data-stu-id="3557b-124">Release Notes</span></span>](https://microsoft.github.io/MixedRealityToolkit-Unity/../ReleaseNotes.html)| <span data-ttu-id="3557b-125">[![MRTK 總覽](../Images/MRTK_Icon_ArchitectureOverview.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../Architecture/Overview.html)</span><span class="sxs-lookup"><span data-stu-id="3557b-125">[![MRTK Overview](../Images/MRTK_Icon_ArchitectureOverview.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../Architecture/Overview.html)</span></span><br/>[<span data-ttu-id="3557b-126">MRTK 總覽</span><span class="sxs-lookup"><span data-stu-id="3557b-126">MRTK Overview</span></span>](https://microsoft.github.io/MixedRealityToolkit-Unity/../Architecture/Overview.html)| <span data-ttu-id="3557b-127">[![功能指南](../Images/MRTK_Icon_FeatureGuides.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../README_Button.html)</span><span class="sxs-lookup"><span data-stu-id="3557b-127">[![Feature Guides](../Images/MRTK_Icon_FeatureGuides.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/../README_Button.html)</span></span><br/>[<span data-ttu-id="3557b-128">功能指南</span><span class="sxs-lookup"><span data-stu-id="3557b-128">Feature Guides</span></span>](https://microsoft.github.io/MixedRealityToolkit-Unity/../README_Button.html)| <span data-ttu-id="3557b-129">[![API 參考](../Images/MRTK_Icon_APIReference.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/api/Microsoft.MixedReality.Toolkit.html)</span><span class="sxs-lookup"><span data-stu-id="3557b-129">[![API Reference](../Images/MRTK_Icon_APIReference.png)](https://microsoft.github.io/MixedRealityToolkit-Unity/api/Microsoft.MixedReality.Toolkit.html)</span></span><br/>[<span data-ttu-id="3557b-130">API 參考</span><span class="sxs-lookup"><span data-stu-id="3557b-130">API Reference</span></span>](https://microsoft.github.io/MixedRealityToolkit-Unity/api/Microsoft.MixedReality.Toolkit.html)|
|:---|:---|:---|:---|

# <a name="build-status"></a><span data-ttu-id="3557b-131">組建狀態</span><span class="sxs-lookup"><span data-stu-id="3557b-131">Build status</span></span>

| <span data-ttu-id="3557b-132">分支</span><span class="sxs-lookup"><span data-stu-id="3557b-132">Branch</span></span> | <span data-ttu-id="3557b-133">CI 狀態</span><span class="sxs-lookup"><span data-stu-id="3557b-133">CI Status</span></span> | <span data-ttu-id="3557b-134">檔狀態</span><span class="sxs-lookup"><span data-stu-id="3557b-134">Docs Status</span></span> |
|---|---|---|
| `mrtk_development` |<span data-ttu-id="3557b-135">[![CI 狀態](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_apis/build/status/public/mrtk_CI?branchName=mrtk_development)](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_build/latest?definitionId=15)</span><span class="sxs-lookup"><span data-stu-id="3557b-135">[![CI Status](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_apis/build/status/public/mrtk_CI?branchName=mrtk_development)](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_build/latest?definitionId=15)</span></span>|<span data-ttu-id="3557b-136">[![檔狀態](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_apis/build/status/public/mrtk_docs?branchName=mrtk_development)](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_build/latest?definitionId=7)</span><span class="sxs-lookup"><span data-stu-id="3557b-136">[![Docs Status](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_apis/build/status/public/mrtk_docs?branchName=mrtk_development)](https://dev.azure.com/aipmr/MixedRealityToolkit-Unity-CI/_build/latest?definitionId=7)</span></span>

# <a name="required-software"></a><span data-ttu-id="3557b-137">必要的軟體</span><span class="sxs-lookup"><span data-stu-id="3557b-137">Required software</span></span>

 | <span data-ttu-id="3557b-138">[ ![ Windows sdk 18362 +](../Images/MRTK170802_Short_17.png)](https://developer.microsoft.com/windows/downloads/windows-10-sdk) [windows sdk 18362 +](https://developer.microsoft.com/windows/downloads/windows-10-sdk)</span><span class="sxs-lookup"><span data-stu-id="3557b-138">[![Windows SDK 18362+](../Images/MRTK170802_Short_17.png)](https://developer.microsoft.com/windows/downloads/windows-10-sdk) [Windows SDK 18362+](https://developer.microsoft.com/windows/downloads/windows-10-sdk)</span></span>| <span data-ttu-id="3557b-139">[ ![ Unity](../Images/MRTK170802_Short_18.png)](https://unity3d.com/get-unity/download/archive) [unity 2018.4. x](https://unity3d.com/get-unity/download/archive)</span><span class="sxs-lookup"><span data-stu-id="3557b-139">[![Unity](../Images/MRTK170802_Short_18.png)](https://unity3d.com/get-unity/download/archive) [Unity 2018.4.x](https://unity3d.com/get-unity/download/archive)</span></span>| <span data-ttu-id="3557b-140">[ ![ Visual studio 2019](../Images/MRTK170802_Short_19.png)](http://dev.windows.com/downloads) [visual studio 2019](http://dev.windows.com/downloads)</span><span class="sxs-lookup"><span data-stu-id="3557b-140">[![Visual Studio 2019](../Images/MRTK170802_Short_19.png)](http://dev.windows.com/downloads) [Visual Studio 2019](http://dev.windows.com/downloads)</span></span>| <span data-ttu-id="3557b-141">[ ![ 模擬器 (選擇性的) ](../Images/MRTK170802_Short_20.png)](https://docs.microsoft.com/windows/mixed-reality/using-the-hololens-emulator) [模擬器 (選擇性) ](https://docs.microsoft.com/windows/mixed-reality/using-the-hololens-emulator)</span><span class="sxs-lookup"><span data-stu-id="3557b-141">[![Emulators (optional)](../Images/MRTK170802_Short_20.png)](https://docs.microsoft.com/windows/mixed-reality/using-the-hololens-emulator) [Emulators (optional)](https://docs.microsoft.com/windows/mixed-reality/using-the-hololens-emulator)</span></span>|
| :--- | :--- | :--- | :--- |
| <span data-ttu-id="3557b-142">若要使用 MRTK v2 來建立應用程式，您需要 Windows 10 2019 版 Update SDK。</span><span class="sxs-lookup"><span data-stu-id="3557b-142">To build apps with MRTK v2, you need the Windows 10 May 2019 Update SDK.</span></span> <br> <span data-ttu-id="3557b-143">若要執行沉浸式耳機的應用程式，您需要 Windows 10 秋季建立者更新。</span><span class="sxs-lookup"><span data-stu-id="3557b-143">To run apps for immersive headsets, you need the Windows 10 Fall Creators Update.</span></span> | <span data-ttu-id="3557b-144">Unity 3D 引擎提供在 Windows 10 中建立混合現實專案的支援</span><span class="sxs-lookup"><span data-stu-id="3557b-144">The Unity 3D engine provides support for building mixed reality projects in Windows 10</span></span> | <span data-ttu-id="3557b-145">Visual Studio 可用於程式碼編輯、部署和建立 UWP 應用程式套件</span><span class="sxs-lookup"><span data-stu-id="3557b-145">Visual Studio is used for code editing, deploying and building UWP app packages</span></span> | <span data-ttu-id="3557b-146">模擬器可讓您測試應用程式，而不需要在模擬環境中使用裝置</span><span class="sxs-lookup"><span data-stu-id="3557b-146">The Emulators allow you to test your app without the device in a simulated environment</span></span> |

# <a name="feature-areas"></a><span data-ttu-id="3557b-147">功能範圍</span><span class="sxs-lookup"><span data-stu-id="3557b-147">Feature areas</span></span>

| <span data-ttu-id="3557b-148">![輸入系統 ](../Images/MRTK_Icon_InputSystem.png) [輸入系統](../Input/Overview.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-148">![Input System](../Images/MRTK_Icon_InputSystem.png) [Input System](../Input/Overview.md)</span></span><br/>&nbsp;  | <span data-ttu-id="3557b-149">![手動追蹤<br/> (HoloLens 2) ](../Images/MRTK_Icon_HandTracking.png) [手動追蹤 <br/> (hololens 2) ](../Input/HandTracking.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-149">![Hand Tracking<br/> (HoloLens 2)](../Images/MRTK_Icon_HandTracking.png) [Hand Tracking<br/> (HoloLens 2)](../Input/HandTracking.md)</span></span> | <span data-ttu-id="3557b-150">![眼睛追蹤<br/> (HoloLens 2) ](../Images/MRTK_Icon_EyeTracking.png) [眼睛追蹤 <br/> (hololens 2) ](../EyeTracking/EyeTracking_Main.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-150">![Eye Tracking<br/> (HoloLens 2)](../Images/MRTK_Icon_EyeTracking.png) [Eye Tracking<br/> (HoloLens 2)](../EyeTracking/EyeTracking_Main.md)</span></span> | <span data-ttu-id="3557b-151">![設定檔 ](../Images/MRTK_Icon_Profiles.png) [設定檔](../out-of-scope/MixedRealityConfigurationGuide.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-151">![Profiles](../Images/MRTK_Icon_Profiles.png) [Profiles](../out-of-scope/MixedRealityConfigurationGuide.md)</span></span><br/>&nbsp; | <span data-ttu-id="3557b-152">![手動追蹤<br/> (Ultraleap) ](../Images/MRTK_Icon_HandTracking.png) [手動追蹤 (Ultraleap) ](../CrossPlatform/LeapMotionMRTK.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-152">![Hand Tracking<br/> (Ultraleap)](../Images/MRTK_Icon_HandTracking.png) [Hand Tracking (Ultraleap)](../CrossPlatform/LeapMotionMRTK.md)</span></span>|
| :--- | :--- | :--- | :--- | :--- |
| <span data-ttu-id="3557b-153">![UI 控制項 ](../Images/MRTK_Icon_UIControls.png) [ui 控制項](README.md#ux-building-blocks)</span><span class="sxs-lookup"><span data-stu-id="3557b-153">![UI Controls](../Images/MRTK_Icon_UIControls.png) [UI Controls](README.md#ux-building-blocks)</span></span><br/>&nbsp; | <span data-ttu-id="3557b-154">![解析器 ](../Images/MRTK_Icon_Solver.png) [解析器](../README_Solver.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-154">![Solvers](../Images/MRTK_Icon_Solver.png) [Solvers](../README_Solver.md)</span></span><br/>&nbsp; | <span data-ttu-id="3557b-155">![多場景<br/> Manager ](../Images/MRTK_Icon_SceneSystem.png) [多場景 <br/> 管理員](../SceneSystem/SceneSystemGettingStarted.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-155">![Multi-Scene<br/> Manager](../Images/MRTK_Icon_SceneSystem.png) [Multi-Scene<br/> Manager](../SceneSystem/SceneSystemGettingStarted.md)</span></span> | <span data-ttu-id="3557b-156">![空間<br/> 感知 ](../Images/MRTK_Icon_SpatialUnderstanding.png) [空間 <br/> 感知](../SpatialAwareness/SpatialAwarenessGettingStarted.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-156">![Spatial<br/> Awareness](../Images/MRTK_Icon_SpatialUnderstanding.png) [Spatial<br/> Awareness](../SpatialAwareness/SpatialAwarenessGettingStarted.md)</span></span> | <span data-ttu-id="3557b-157">![診斷<br/> 工具 ](../Images/MRTK_Icon_Diagnostics.png) [診斷 <br/> 工具](../Diagnostics/DiagnosticsSystemGettingStarted.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-157">![Diagnostic<br/> Tool](../Images/MRTK_Icon_Diagnostics.png) [Diagnostic<br/> Tool](../Diagnostics/DiagnosticsSystemGettingStarted.md)</span></span> |
| <span data-ttu-id="3557b-158">![MRTK 標準著色器 ](../Images/MRTK_Icon_StandardShader.png) [MRTK 標準著色器](../README_MRTKStandardShader.md?q=shader)</span><span class="sxs-lookup"><span data-stu-id="3557b-158">![MRTK Standard Shader](../Images/MRTK_Icon_StandardShader.png) [MRTK Standard Shader](../README_MRTKStandardShader.md?q=shader)</span></span> | <span data-ttu-id="3557b-159">![語音 & 聽寫 ](../Images/MRTK_Icon_VoiceCommand.png) [語音](../Input/Speech.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-159">![Speech & Dictation](../Images/MRTK_Icon_VoiceCommand.png) [Speech](../Input/Speech.md)</span></span><br/> <span data-ttu-id="3557b-160">& [聽寫](../Input/Dictation.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-160">& [Dictation](../Input/Dictation.md)</span></span> | <span data-ttu-id="3557b-161">![界限<br/>系統 ](../Images/MRTK_Icon_Boundary.png) [界限 <br/> 系統](../Boundary/BoundarySystemGettingStarted.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-161">![Boundary<br/>System](../Images/MRTK_Icon_Boundary.png) [Boundary<br/>System](../Boundary/BoundarySystemGettingStarted.md)</span></span>| <span data-ttu-id="3557b-162">![編輯器內<br/>模擬 ](../Images/MRTK_Icon_InputSystem.png) [編輯器內 <br/> 模擬](../InputSimulation/InputSimulationService.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-162">![In-Editor<br/>Simulation](../Images/MRTK_Icon_InputSystem.png) [In-Editor<br/>Simulation](../InputSimulation/InputSimulationService.md)</span></span> | <span data-ttu-id="3557b-163">![實驗性<br/>功能 ](../Images/MRTK_Icon_Experimental.png) [實驗性 <br/> 功能](../../Contributing/ExperimentalFeatures.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-163">![Experimental<br/>Features](../Images/MRTK_Icon_Experimental.png) [Experimental<br/>Features](../../Contributing/ExperimentalFeatures.md)</span></span>|

# <a name="ux-building-blocks"></a><span data-ttu-id="3557b-164">UX 組建區塊</span><span class="sxs-lookup"><span data-stu-id="3557b-164">UX building blocks</span></span>

|  <span data-ttu-id="3557b-165">[ ![ 按鈕](../Images/Button/MRTK_Button_Main.png)](../README_Button.md)[按鈕](../README_Button.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-165">[![Button](../Images/Button/MRTK_Button_Main.png)](../README_Button.md) [Button](../README_Button.md)</span></span> | <span data-ttu-id="3557b-166">[ ![ 界限控制項](../Images/BoundsControl/MRTK_BoundsControl_Main.png)](../README_BoundsControl.md)[界限控制項](../README_BoundsControl.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-166">[![Bounds Control](../Images/BoundsControl/MRTK_BoundsControl_Main.png)](../README_BoundsControl.md) [Bounds Control](../README_BoundsControl.md)</span></span> | <span data-ttu-id="3557b-167">[ ![ 物件](../Images/ManipulationHandler/MRTK_Manipulation_Main.png)](../README_ObjectManipulator.md)操作工具[物件](../README_ObjectManipulator.md)操作工具</span><span class="sxs-lookup"><span data-stu-id="3557b-167">[![Object Manipulator](../Images/ManipulationHandler/MRTK_Manipulation_Main.png)](../README_ObjectManipulator.md) [Object Manipulator](../README_ObjectManipulator.md)</span></span> |
|:--- | :--- | :--- |
| <span data-ttu-id="3557b-168">支援各種輸入方法的按鈕控制項，包括 HoloLens 2 的明確表述</span><span class="sxs-lookup"><span data-stu-id="3557b-168">A button control which supports various input methods, including HoloLens 2's articulated hand</span></span> | <span data-ttu-id="3557b-169">在3D 空間中操作物件的標準 UI</span><span class="sxs-lookup"><span data-stu-id="3557b-169">Standard UI for manipulating objects in 3D space</span></span> | <span data-ttu-id="3557b-170">以一或兩個手中操作物件的腳本</span><span class="sxs-lookup"><span data-stu-id="3557b-170">Script for manipulating objects with one or two hands</span></span> |
|  <span data-ttu-id="3557b-171">[ ![ 平板](../Images/Slate/MRTK_Slate_Main.png)](../README_Slate.md)[平板](../README_Slate.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-171">[![Slate](../Images/Slate/MRTK_Slate_Main.png)](../README_Slate.md) [Slate](../README_Slate.md)</span></span> | <span data-ttu-id="3557b-172">[ ![ 系統鍵盤](../Images/SystemKeyboard/MRTK_SystemKeyboard_Main.png)](../README_SystemKeyboard.md)[系統鍵盤](../README_SystemKeyboard.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-172">[![System Keyboard](../Images/SystemKeyboard/MRTK_SystemKeyboard_Main.png)](../README_SystemKeyboard.md) [System Keyboard](../README_SystemKeyboard.md)</span></span> | <span data-ttu-id="3557b-173">[ ![ 互動](../Images/Interactable/InteractableExamples.png)](../README_Interactable.md)[互動](../README_Interactable.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-173">[![Interactable](../Images/Interactable/InteractableExamples.png)](../README_Interactable.md) [Interactable](../README_Interactable.md)</span></span> |
| <span data-ttu-id="3557b-174">2D 樣式平面，支援以已明確表達的手寫輸入進行滾動</span><span class="sxs-lookup"><span data-stu-id="3557b-174">2D style plane which supports scrolling with articulated hand input</span></span> | <span data-ttu-id="3557b-175">在 Unity 中使用系統鍵盤的範例腳本</span><span class="sxs-lookup"><span data-stu-id="3557b-175">Example script of using the system keyboard in Unity</span></span>  | <span data-ttu-id="3557b-176">使用視覺狀態和主題支援讓物件互動的腳本</span><span class="sxs-lookup"><span data-stu-id="3557b-176">A script for making objects interactable with visual states and theme support</span></span> |
|  <span data-ttu-id="3557b-177">[ ![ 規劃](../Images/Solver/MRTK_Solver_Main.png)](../README_Solver.md)求解[規劃](../README_Solver.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-177">[![Solver](../Images/Solver/MRTK_Solver_Main.png)](../README_Solver.md) [Solver](../README_Solver.md)</span></span> | <span data-ttu-id="3557b-178">[ ![ 物件集合](../Images/ObjectCollection/MRTK_ObjectCollection_Main.jpg)](../README_ObjectCollection.md)[物件集合](../README_ObjectCollection.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-178">[![Object Collection](../Images/ObjectCollection/MRTK_ObjectCollection_Main.jpg)](../README_ObjectCollection.md) [Object Collection](../README_ObjectCollection.md)</span></span> | <span data-ttu-id="3557b-179">[ ![ 工具](../Images/Tooltip/MRTK_Tooltip_Main.png)](../README_Tooltip.md)提示[工具提示](../README_Tooltip.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-179">[![Tooltip](../Images/Tooltip/MRTK_Tooltip_Main.png)](../README_Tooltip.md) [Tooltip](../README_Tooltip.md)</span></span> |
| <span data-ttu-id="3557b-180">各種物件定位行為，例如標記-沿著標記、主體鎖定、常數視圖大小和表面磁性</span><span class="sxs-lookup"><span data-stu-id="3557b-180">Various object positioning behaviors such as tag-along, body-lock, constant view size and surface magnetism</span></span> | <span data-ttu-id="3557b-181">在三維圖形中設定物件陣列的腳本</span><span class="sxs-lookup"><span data-stu-id="3557b-181">Script for laying out an array of objects in a three-dimensional shape</span></span> | <span data-ttu-id="3557b-182">具有彈性錨點/pivot 系統的注釋 UI，可用來標記動作控制器和物件</span><span class="sxs-lookup"><span data-stu-id="3557b-182">Annotation UI with a flexible anchor/pivot system, which can be used for labeling motion controllers and objects</span></span> |
|  <span data-ttu-id="3557b-183">[ ![ 滑杆](../Images/Slider/MRTK_UX_Slider_Main.jpg)](../README_Sliders.md)[滑杆](../README_Sliders.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-183">[![Slider](../Images/Slider/MRTK_UX_Slider_Main.jpg)](../README_Sliders.md) [Slider](../README_Sliders.md)</span></span> | <span data-ttu-id="3557b-184">[ ![ MRTK 標準著色器](../Images/MRTKStandardShader/MRTK_StandardShader.jpg)](../README_MRTKStandardShader.md) [MRTK 標準著色器](../README_MRTKStandardShader.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-184">[![MRTK Standard Shader](../Images/MRTKStandardShader/MRTK_StandardShader.jpg)](../README_MRTKStandardShader.md) [MRTK Standard Shader](../README_MRTKStandardShader.md)</span></span> | <span data-ttu-id="3557b-185">[ ![ 手形功能表](../Images/Solver/MRTK_UX_HandMenu.png)](../README_HandMenu.md)[功能表](../README_HandMenu.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-185">[![Hand Menu](../Images/Solver/MRTK_UX_HandMenu.png)](../README_HandMenu.md) [Hand Menu](../README_HandMenu.md)</span></span> |
| <span data-ttu-id="3557b-186">調整支援直接追蹤互動之值的滑杆 UI</span><span class="sxs-lookup"><span data-stu-id="3557b-186">Slider UI for adjusting values supporting direct hand tracking interaction</span></span> | <span data-ttu-id="3557b-187">MRTK 的標準著色器可支援各種流暢的設計項目與效能</span><span class="sxs-lookup"><span data-stu-id="3557b-187">MRTK's Standard shader supports various Fluent design elements with performance</span></span> | <span data-ttu-id="3557b-188">使用手形條件約束規劃的手動鎖定 UI，以進行快速存取</span><span class="sxs-lookup"><span data-stu-id="3557b-188">Hand-locked UI for quick access, using the Hand Constraint Solver</span></span> |
|  <span data-ttu-id="3557b-189">[ ![ 應用程式行](../Images/AppBar/MRTK_AppBar_Main.png)](../README_AppBar.md)[應用程式行](../README_AppBar.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-189">[![App Bar](../Images/AppBar/MRTK_AppBar_Main.png)](../README_AppBar.md) [App Bar](../README_AppBar.md)</span></span> | <span data-ttu-id="3557b-190">[ ![ 指標](../Images/Pointers/MRTK_Pointer_Main.png)](../Input/Pointers.md)[指標](../Input/Pointers.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-190">[![Pointers](../Images/Pointers/MRTK_Pointer_Main.png)](../Input/Pointers.md) [Pointers](../Input/Pointers.md)</span></span> | <span data-ttu-id="3557b-191">[ ![ Fingertip 視覺效果](../Images/Fingertip/MRTK_FingertipVisualization_Main.png)](../README_FingertipVisualization.md) [Fingertip 視覺效果](../README_FingertipVisualization.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-191">[![Fingertip Visualization](../Images/Fingertip/MRTK_FingertipVisualization_Main.png)](../README_FingertipVisualization.md) [Fingertip Visualization](../README_FingertipVisualization.md)</span></span> |
| <span data-ttu-id="3557b-192">界限控制項手動啟用的 UI</span><span class="sxs-lookup"><span data-stu-id="3557b-192">UI for Bounds Control's manual activation</span></span> | <span data-ttu-id="3557b-193">瞭解各種類型的指標</span><span class="sxs-lookup"><span data-stu-id="3557b-193">Learn about various types of pointers</span></span> | <span data-ttu-id="3557b-194">Fingertip 上的視覺效果 affordance，可改善直接互動的信賴度</span><span class="sxs-lookup"><span data-stu-id="3557b-194">Visual affordance on the fingertip which improves the confidence for the direct interaction</span></span> |
|  <span data-ttu-id="3557b-195">靠近[功能表](../README_NearMenu.md)的[ ![ 附近功能表](../Images/NearMenu/MRTK_UX_NearMenu.png)](../README_NearMenu.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-195">[![Near Menu](../Images/NearMenu/MRTK_UX_NearMenu.png)](../README_NearMenu.md) [Near Menu](../README_NearMenu.md)</span></span> | <span data-ttu-id="3557b-196">[ ![ 空間感知](../Images/SpatialAwareness/MRTK_SpatialAwareness_Main.png)](../SpatialAwareness/SpatialAwarenessGettingStarted.md)[空間感知](../SpatialAwareness/SpatialAwarenessGettingStarted.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-196">[![Spatial Awareness](../Images/SpatialAwareness/MRTK_SpatialAwareness_Main.png)](../SpatialAwareness/SpatialAwarenessGettingStarted.md) [Spatial Awareness](../SpatialAwareness/SpatialAwarenessGettingStarted.md)</span></span> | <span data-ttu-id="3557b-197">[ ![ 語音命令](../Images/Input/MRTK_Input_Speech.png)](../Input/Speech.md)[語音命令](../Input/Speech.md)  /  [聽寫](../Input/Dictation.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-197">[![Voice Command](../Images/Input/MRTK_Input_Speech.png)](../Input/Speech.md) [Voice Command](../Input/Speech.md) / [Dictation](../Input/Dictation.md)</span></span> |
| <span data-ttu-id="3557b-198">接近互動的浮動功能表 UI</span><span class="sxs-lookup"><span data-stu-id="3557b-198">Floating menu UI for the near interactions</span></span> | <span data-ttu-id="3557b-199">讓您的全像攝影物件與實體環境互動</span><span class="sxs-lookup"><span data-stu-id="3557b-199">Make your holographic objects interact with the physical environments</span></span> | <span data-ttu-id="3557b-200">整合語音輸入的腳本和範例</span><span class="sxs-lookup"><span data-stu-id="3557b-200">Scripts and examples for integrating speech input</span></span> |
|  <span data-ttu-id="3557b-201">[ ![ 進度指示器](../Images/ProgressIndicator/MRTK_ProgressIndicator_Main.png)](../README_ProgressIndicator.md)[進度指標](../README_ProgressIndicator.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-201">[![Progress Indicator](../Images/ProgressIndicator/MRTK_ProgressIndicator_Main.png)](../README_ProgressIndicator.md) [Progress Indicator](../README_ProgressIndicator.md)</span></span> | <span data-ttu-id="3557b-202">[ ![ 對話方塊](../Images/Dialog/MRTK_UX_Dialog_Main.png)](Dialog/README_Dialog.md)[對話方塊 [實驗]](Dialog/README_Dialog.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-202">[![Dialog](../Images/Dialog/MRTK_UX_Dialog_Main.png)](Dialog/README_Dialog.md) [Dialog [Experimental]](Dialog/README_Dialog.md)</span></span> | <span data-ttu-id="3557b-203">[ ![ 手動教練](../Images/HandCoach/MRTK_UX_HandCoach_Main.jpg)](HandCoach/README_HandCoach.md)[指導 [實驗]](HandCoach/README_HandCoach.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-203">[![Hand Coach](../Images/HandCoach/MRTK_UX_HandCoach_Main.jpg)](HandCoach/README_HandCoach.md) [Hand Coach [Experimental]](HandCoach/README_HandCoach.md)</span></span> |
| <span data-ttu-id="3557b-204">用於傳達資料處理或作業的視覺化指標</span><span class="sxs-lookup"><span data-stu-id="3557b-204">Visual indicator for communicating data process or operation</span></span> | <span data-ttu-id="3557b-205">要求使用者確認或確認的 UI</span><span class="sxs-lookup"><span data-stu-id="3557b-205">UI for asking for user's confirmation or acknowledgement</span></span>  | <span data-ttu-id="3557b-206">當手勢未教授時，可協助引導使用者的元件</span><span class="sxs-lookup"><span data-stu-id="3557b-206">Component that helps guide the user when the gesture has not been taught</span></span> |
|  <span data-ttu-id="3557b-207">[ ![ 手物理服務](../Images/HandPhysics/MRTK_UX_HandPhysics_Main.jpg)](HandPhysicsService/README.md)的[物理服務 [實驗]](HandPhysicsService/README.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-207">[![Hand Physics Service](../Images/HandPhysics/MRTK_UX_HandPhysics_Main.jpg)](HandPhysicsService/README.md) [Hand Physics Service [Experimental]](HandPhysicsService/README.md)</span></span> | <span data-ttu-id="3557b-208">[ ![ 滾動集合](../Images/ScrollingCollection/ScrollingCollection_Main.jpg)](../README_ScrollingObjectCollection.md)[滾動集合](../README_ScrollingObjectCollection.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-208">[![Scrolling Collection](../Images/ScrollingCollection/ScrollingCollection_Main.jpg)](../README_ScrollingObjectCollection.md) [Scrolling Collection](../README_ScrollingObjectCollection.md)</span></span> | <span data-ttu-id="3557b-209">[ ![ ](../Images/Dock/MRTK_UX_Dock_Main.png)](Dock/README_Dock.md)停駐[固定 [實驗]](Dock/README_Dock.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-209">[![Dock](../Images/Dock/MRTK_UX_Dock_Main.png)](Dock/README_Dock.md) [Dock [Experimental]](Dock/README_Dock.md)</span></span> |
| <span data-ttu-id="3557b-210">實際的物理服務可讓您透過明確的方式進行固定的內文衝突事件和互動</span><span class="sxs-lookup"><span data-stu-id="3557b-210">The hand physics service enables rigid body collision events and interactions with articulated hands</span></span> | <span data-ttu-id="3557b-211">原生滾動3D 物件的物件集合</span><span class="sxs-lookup"><span data-stu-id="3557b-211">An Object Collection that natively scrolls 3D objects</span></span> | <span data-ttu-id="3557b-212">Dock 允許將物件移入和移出預定的位置</span><span class="sxs-lookup"><span data-stu-id="3557b-212">The Dock allows objects to be moved in and out of predetermined positions</span></span> |
|  <span data-ttu-id="3557b-213">[ ![ 眼睛追蹤：目標選擇](../Images/EyeTracking/mrtk_et_targetselect.png)](../EyeTracking/EyeTracking_TargetSelection.md)[眼睛追蹤：目標選取範圍](../EyeTracking/EyeTracking_TargetSelection.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-213">[![Eye Tracking: Target Selection](../Images/EyeTracking/mrtk_et_targetselect.png)](../EyeTracking/EyeTracking_TargetSelection.md) [Eye Tracking: Target Selection](../EyeTracking/EyeTracking_TargetSelection.md)</span></span> | <span data-ttu-id="3557b-214">[ ![ 眼睛追蹤：導覽](../Images/EyeTracking/mrtk_et_navigation.png)](../EyeTracking/EyeTracking_Navigation.md)[眼睛追蹤：導覽](../EyeTracking/EyeTracking_Navigation.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-214">[![Eye Tracking: Navigation](../Images/EyeTracking/mrtk_et_navigation.png)](../EyeTracking/EyeTracking_Navigation.md) [Eye Tracking: Navigation](../EyeTracking/EyeTracking_Navigation.md)</span></span> | <span data-ttu-id="3557b-215">[ ![ 眼睛追蹤：熱度圖](../Images/EyeTracking/mrtk_et_heatmaps.png)](../EyeTracking/EyeTracking_ExamplesOverview.md#visualization-of-visual-attention)[視覺追蹤：熱度圖](../EyeTracking/EyeTracking_ExamplesOverview.md#visualization-of-visual-attention)</span><span class="sxs-lookup"><span data-stu-id="3557b-215">[![Eye Tracking: Heat Map](../Images/EyeTracking/mrtk_et_heatmaps.png)](../EyeTracking/EyeTracking_ExamplesOverview.md#visualization-of-visual-attention) [Eye Tracking: Heat Map](../EyeTracking/EyeTracking_ExamplesOverview.md#visualization-of-visual-attention)</span></span> |
| <span data-ttu-id="3557b-216">結合眼睛、語音和手輸入，以快速且輕鬆地在場景中選取全像影像</span><span class="sxs-lookup"><span data-stu-id="3557b-216">Combine eyes, voice and hand input to quickly and effortlessly select holograms across your scene</span></span> | <span data-ttu-id="3557b-217">瞭解如何根據您要查看的內容，自動滾動文字或流暢縮放至焦點內容</span><span class="sxs-lookup"><span data-stu-id="3557b-217">Learn how to auto-scroll text or fluently zoom into focused content based on what you are looking at</span></span> | <span data-ttu-id="3557b-218">記錄、載入和視覺化使用者在您的應用程式中查看的範例</span><span class="sxs-lookup"><span data-stu-id="3557b-218">Examples for logging, loading and visualizing what users have been looking at in your app</span></span> |

# <a name="tools"></a><span data-ttu-id="3557b-219">工具</span><span class="sxs-lookup"><span data-stu-id="3557b-219">Tools</span></span>

|  <span data-ttu-id="3557b-220">[ ![ 優化視窗](../Images/MRTK_Icon_OptimizeWindow.png)](../Tools/OptimizeWindow.md)[優化視窗](../Tools/OptimizeWindow.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-220">[![Optimize Window](../Images/MRTK_Icon_OptimizeWindow.png)](../Tools/OptimizeWindow.md) [Optimize Window](../Tools/OptimizeWindow.md)</span></span> | <span data-ttu-id="3557b-221">相依性[ ![ 視窗](../Images/MRTK_Icon_DependencyWindow.png)](../Tools/DependencyWindow.md)相依性[視窗](../Tools/DependencyWindow.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-221">[![Dependency Window](../Images/MRTK_Icon_DependencyWindow.png)](../Tools/DependencyWindow.md) [Dependency Window](../Tools/DependencyWindow.md)</span></span> | ![組建視窗](../Images/MRTK_Icon_BuildWindow.png) <span data-ttu-id="3557b-223">組建視窗</span><span class="sxs-lookup"><span data-stu-id="3557b-223">Build Window</span></span> | <span data-ttu-id="3557b-224">[ ![ 輸入錄製](../Images/MRTK_Icon_InputRecording.png)](../InputSimulation/InputAnimationRecording.md)[輸入記錄](../InputSimulation/InputAnimationRecording.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-224">[![Input recording](../Images/MRTK_Icon_InputRecording.png)](../InputSimulation/InputAnimationRecording.md) [Input recording](../InputSimulation/InputAnimationRecording.md)</span></span> |
|:--- | :--- | :--- | :--- |
| <span data-ttu-id="3557b-225">自動設定混合現實專案以進行效能優化</span><span class="sxs-lookup"><span data-stu-id="3557b-225">Automate configuration of Mixed Reality projects for performance optimizations</span></span> | <span data-ttu-id="3557b-226">分析資產之間的相依性，並找出未使用的資產</span><span class="sxs-lookup"><span data-stu-id="3557b-226">Analyze dependencies between assets and identify unused assets</span></span> |  <span data-ttu-id="3557b-227">設定及執行混合現實應用程式的端對端組建程式</span><span class="sxs-lookup"><span data-stu-id="3557b-227">Configure and execute an end-to-end build process for Mixed Reality applications</span></span> | <span data-ttu-id="3557b-228">在編輯器中錄製並播放前端移動和手動追蹤資料</span><span class="sxs-lookup"><span data-stu-id="3557b-228">Record and playback head movement and hand tracking data in editor</span></span> |

# <a name="example-scenes"></a><span data-ttu-id="3557b-229">範例場景</span><span class="sxs-lookup"><span data-stu-id="3557b-229">Example scenes</span></span>

<span data-ttu-id="3557b-230">探索 MRTK 在 [此範例場景](../README_HandInteractionExamples.md)中的各種互動和 UI 控制項類型。</span><span class="sxs-lookup"><span data-stu-id="3557b-230">Explore MRTK's various types of interactions and UI controls in [this example scene](../README_HandInteractionExamples.md).</span></span>

<span data-ttu-id="3557b-231">您可以在 [資產/MixedRealityToolkit] 下找到其他範例場景 [**。範例/示範**](/Assets/MixedRealityToolkit.Examples/Demos) 資料夾。</span><span class="sxs-lookup"><span data-stu-id="3557b-231">You can find  other example scenes under [**Assets/MixedRealityToolkit.Examples/Demos**](/Assets/MixedRealityToolkit.Examples/Demos) folder.</span></span>

<span data-ttu-id="3557b-232">[![範例場景](../Images/MRTK_Examples.png)](../README_HandInteractionExamples.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-232">[![Example Scene](../Images/MRTK_Examples.png)](../README_HandInteractionExamples.md)</span></span>

# <a name="mrtk-examples-hub"></a><span data-ttu-id="3557b-233">MRTK 範例中樞</span><span class="sxs-lookup"><span data-stu-id="3557b-233">MRTK examples hub</span></span>

<span data-ttu-id="3557b-234">您可以使用 MRTK 範例中樞來嘗試 MRTK 中的各種範例場景。</span><span class="sxs-lookup"><span data-stu-id="3557b-234">With the MRTK Examples Hub, you can try various example scenes in MRTK.</span></span>
<span data-ttu-id="3557b-235">您可以在 [ [**發行資產**](https://github.com/microsoft/MixedRealityToolkit-Unity/releases/tag/v2.4.0) ] 資料夾下找到 HoloLens (x86) 、hololens 2 (ARM) 和 Windows Mixed Reality 沉浸式耳機 (x64) 的預先建立應用程式套件。</span><span class="sxs-lookup"><span data-stu-id="3557b-235">You can find pre-built app packages for HoloLens(x86), HoloLens 2(ARM), and Windows Mixed Reality immersive headsets(x64) under [**Release Assets**](https://github.com/microsoft/MixedRealityToolkit-Unity/releases/tag/v2.4.0) folder.</span></span> <span data-ttu-id="3557b-236">[使用 Windows 裝置入口網站在 HoloLens 上安裝應用程式](https://docs.microsoft.com/hololens/hololens-install-apps#use-the-windows-device-portal-to-install-apps-on-hololens)。</span><span class="sxs-lookup"><span data-stu-id="3557b-236">[Use the Windows Device Portal to install apps on HoloLens](https://docs.microsoft.com/hololens/hololens-install-apps#use-the-windows-device-portal-to-install-apps-on-hololens).</span></span> <span data-ttu-id="3557b-237">在 HoloLens 2 上，您可以 [透過 Microsoft Store 應用程式下載並安裝 MRTK 範例中樞](https://www.microsoft.com/p/mrtk-examples-hub/9mv8c39l2sj4)。</span><span class="sxs-lookup"><span data-stu-id="3557b-237">On HoloLens 2, you can download and install [MRTK Examples Hub through the Microsoft Store app](https://www.microsoft.com/p/mrtk-examples-hub/9mv8c39l2sj4).</span></span>

<span data-ttu-id="3557b-238">請參閱 [範例中樞的讀我檔案頁面](../README_ExampleHub.md) ，以瞭解如何使用 MRTK 的場景系統和場景轉換服務建立多場景中樞的詳細資料。</span><span class="sxs-lookup"><span data-stu-id="3557b-238">See [Examples Hub README page](../README_ExampleHub.md) to learn about the details on creating a multi-scene hub with MRTK's scene system and scene transition service.</span></span>

<span data-ttu-id="3557b-239">[![範例場景](../Images/MRTK_ExamplesHub.png)](../README_HandInteractionExamples.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-239">[![Example Scene](../Images/MRTK_ExamplesHub.png)](../README_HandInteractionExamples.md)</span></span>

# <a name="sample-apps-made-with-mrtk"></a><span data-ttu-id="3557b-240">使用 MRTK 建立的範例應用程式</span><span class="sxs-lookup"><span data-stu-id="3557b-240">Sample apps made with MRTK</span></span>

| <span data-ttu-id="3557b-241">[![元素週期表](../Images/MRDL_PeriodicTable.jpg)](https://medium.com/@dongyoonpark/bringing-the-periodic-table-of-the-elements-app-to-hololens-2-with-mrtk-v2-a6e3d8362158)</span><span class="sxs-lookup"><span data-stu-id="3557b-241">[![Periodic Table of the Elements](../Images/MRDL_PeriodicTable.jpg)](https://medium.com/@dongyoonpark/bringing-the-periodic-table-of-the-elements-app-to-hololens-2-with-mrtk-v2-a6e3d8362158)</span></span>| <span data-ttu-id="3557b-242">[![星系探險](../Images/MRTK_GalaxyExplorer.jpg)](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span><span class="sxs-lookup"><span data-stu-id="3557b-242">[![Galaxy Explorer](../Images/MRTK_GalaxyExplorer.jpg)](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span></span>| <span data-ttu-id="3557b-243">[![星系探險](../Images/MRDL_Surfaces.jpg)](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span><span class="sxs-lookup"><span data-stu-id="3557b-243">[![Galaxy Explorer](../Images/MRDL_Surfaces.jpg)](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span></span>|
|:--- | :--- | :--- |
| <span data-ttu-id="3557b-244">專案的[定期資料表](https://github.com/Microsoft/MRDL_Unity_PeriodicTable)是開放原始碼範例應用程式，示範如何使用 MRTK 的輸入系統和建立區塊來建立 HoloLens 和沉浸式耳機的應用程式體驗。</span><span class="sxs-lookup"><span data-stu-id="3557b-244">[Periodic Table of the Elements](https://github.com/Microsoft/MRDL_Unity_PeriodicTable) is an open-source sample app which demonstrates how to use MRTK's input system and building blocks to create an app experience for HoloLens and Immersive headsets.</span></span> <span data-ttu-id="3557b-245">閱讀移植案例： [使用 MRTK v2 將專案應用程式的定期資料表帶入 HoloLens 2](https://medium.com/@dongyoonpark/bringing-the-periodic-table-of-the-elements-app-to-hololens-2-with-mrtk-v2-a6e3d8362158)</span><span class="sxs-lookup"><span data-stu-id="3557b-245">Read the porting story: [Bringing the Periodic Table of the Elements app to HoloLens 2 with MRTK v2](https://medium.com/@dongyoonpark/bringing-the-periodic-table-of-the-elements-app-to-hololens-2-with-mrtk-v2-a6e3d8362158)</span></span> |<span data-ttu-id="3557b-246">[Galaxy Explorer](https://github.com/Microsoft/GalaxyExplorer) 是一種開放原始碼範例應用程式，最初是在2016年3月的「分享您的想法」活動中所開發。</span><span class="sxs-lookup"><span data-stu-id="3557b-246">[Galaxy Explorer](https://github.com/Microsoft/GalaxyExplorer) is an open-source sample app that was originally developed in March 2016 as part of the HoloLens 'Share Your Idea' campaign.</span></span> <span data-ttu-id="3557b-247">已使用 MRTK v2 以 HoloLens 2 的新功能更新 Galaxy Explorer。</span><span class="sxs-lookup"><span data-stu-id="3557b-247">Galaxy Explorer has been updated with new features for HoloLens 2, using MRTK v2.</span></span> <span data-ttu-id="3557b-248">閱讀案例： [適用于 HoloLens 2 的 Galaxy Explorer 製作](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span><span class="sxs-lookup"><span data-stu-id="3557b-248">Read the story: [The Making of Galaxy Explorer for HoloLens 2](https://docs.microsoft.com/windows/mixed-reality/galaxy-explorer-update)</span></span> |<span data-ttu-id="3557b-249">[表面](https://github.com/Microsoft/GalaxyExplorer) 是適用于 HoloLens 2 的開放原始碼範例應用程式，它會探索如何使用視覺效果、音訊和完全明確的手動追蹤來建立 tactile 刺痛。</span><span class="sxs-lookup"><span data-stu-id="3557b-249">[Surfaces](https://github.com/Microsoft/GalaxyExplorer) is an open-source sample app for HoloLens 2 which explores how we can create a tactile sensation with visual, audio, and fully articulated hand-tracking.</span></span> <span data-ttu-id="3557b-250">查看 Microsoft MR Dev Days session [學習 from surface 應用程式](https://channel9.msdn.com/Shows/Docs-Mixed-Reality/Learnings-from-the-MR-Surfaces-App) ，以取得詳細的設計和開發案例。</span><span class="sxs-lookup"><span data-stu-id="3557b-250">Check out Microsoft MR Dev Days session [Learnings from the Surfaces app](https://channel9.msdn.com/Shows/Docs-Mixed-Reality/Learnings-from-the-MR-Surfaces-App) for the detailed design and development story.</span></span> |

# <a name="session-videos-from-mixed-reality-dev-days-2020"></a><span data-ttu-id="3557b-251">來自混合現實開發日2020的研討會影片</span><span class="sxs-lookup"><span data-stu-id="3557b-251">Session videos from Mixed Reality Dev Days 2020</span></span>

| <span data-ttu-id="3557b-252">[![MRDevDays](../Images/MRDevDays_Session1.png)](https://channel9.msdn.com/Shows/Docs-Mixed-Reality/Intro-to-MRTK-Unity)</span><span class="sxs-lookup"><span data-stu-id="3557b-252">[![MRDevDays](../Images/MRDevDays_Session1.png)](https://channel9.msdn.com/Shows/Docs-Mixed-Reality/Intro-to-MRTK-Unity)</span></span>| <span data-ttu-id="3557b-253">[![MRDevDays](../Images/MRDevDays_Session2.png)](https://channel9.msdn.com/Shows/Docs-Mixed-Reality/MRTKs-UX-Building-Blocks)</span><span class="sxs-lookup"><span data-stu-id="3557b-253">[![MRDevDays](../Images/MRDevDays_Session2.png)](https://channel9.msdn.com/Shows/Docs-Mixed-Reality/MRTKs-UX-Building-Blocks)</span></span>| <span data-ttu-id="3557b-254">[![MRDevDays](../Images/MRDevDays_Session3.png)](https://channel9.msdn.com/Shows/Docs-Mixed-Reality/MRTK-Performance-and-Shaders)</span><span class="sxs-lookup"><span data-stu-id="3557b-254">[![MRDevDays](../Images/MRDevDays_Session3.png)](https://channel9.msdn.com/Shows/Docs-Mixed-Reality/MRTK-Performance-and-Shaders)</span></span>|
|:--- | :--- | :--- |
| <span data-ttu-id="3557b-255">如何建立從開始到完成的簡單 MRTK 應用程式的教學課程。</span><span class="sxs-lookup"><span data-stu-id="3557b-255">Tutorial on how to create a simple MRTK app from start to finish.</span></span> <span data-ttu-id="3557b-256">瞭解互動概念和 MRTK 的多平臺功能。</span><span class="sxs-lookup"><span data-stu-id="3557b-256">Learn about interaction concepts and MRTK’s multi-platform capabilities.</span></span> | <span data-ttu-id="3557b-257">深入探討 MRTK 的 UX 構成要素，協助您打造美觀的混合現實體驗。</span><span class="sxs-lookup"><span data-stu-id="3557b-257">Deep dive on the MRTK’s UX building blocks that help you build beautiful mixed reality experiences.</span></span> | <span data-ttu-id="3557b-258">MRTK 和外部的效能工具簡介，以及 MRTK 標準著色器的總覽。</span><span class="sxs-lookup"><span data-stu-id="3557b-258">An introduction to performance tools, both in MRTK and external, as well as an overview of the MRTK Standard Shader.</span></span> |

<span data-ttu-id="3557b-259">若要探索更多課程影片，請參閱 [混合現實開發日](https://docs.microsoft.com/windows/mixed-reality/mr-dev-days-sessions) 。</span><span class="sxs-lookup"><span data-stu-id="3557b-259">See [Mixed Reality Dev Days](https://docs.microsoft.com/windows/mixed-reality/mr-dev-days-sessions) to explore more session videos.</span></span>

# <a name="engage-with-the-community"></a><span data-ttu-id="3557b-260">與社區互動</span><span class="sxs-lookup"><span data-stu-id="3557b-260">Engage with the community</span></span>

* <span data-ttu-id="3557b-261">在 MRTK 上加入關於 [時差](https://holodevelopers.slack.com/)的交談。</span><span class="sxs-lookup"><span data-stu-id="3557b-261">Join the conversation around MRTK on [Slack](https://holodevelopers.slack.com/).</span></span> <span data-ttu-id="3557b-262">您可以透過 [自動邀請寄件者](https://holodevelopersslack.azurewebsites.net/)來加入「時差」群。</span><span class="sxs-lookup"><span data-stu-id="3557b-262">You can join the Slack community via the [automatic invitation sender](https://holodevelopersslack.azurewebsites.net/).</span></span>

* <span data-ttu-id="3557b-263">使用 **MRTK** 標記詢問有關使用 MRTK On [Stack 溢](https://stackoverflow.com/questions/tagged/mrtk)位的問題。</span><span class="sxs-lookup"><span data-stu-id="3557b-263">Ask questions about using MRTK on [Stack Overflow](https://stackoverflow.com/questions/tagged/mrtk) using the **MRTK** tag.</span></span>

* <span data-ttu-id="3557b-264">如果您發現 MRTK 程式碼中有問題，請搜尋 [已知問題](https://github.com/Microsoft/MixedRealityToolkit-Unity/issues) 或提出 [新問題](https://github.com/Microsoft/MixedRealityToolkit-Unity/issues) 。</span><span class="sxs-lookup"><span data-stu-id="3557b-264">Search for [known issues](https://github.com/Microsoft/MixedRealityToolkit-Unity/issues) or file a [new issue](https://github.com/Microsoft/MixedRealityToolkit-Unity/issues) if you find something broken in MRTK code.</span></span>

* <span data-ttu-id="3557b-265">如有關于參與 MRTK 的問題，請移至「 [混合現實」工具](https://holodevelopers.slack.com/messages/C2H4HT858) 組頻道的時差。</span><span class="sxs-lookup"><span data-stu-id="3557b-265">For questions about contributing to MRTK, go to the [mixed-reality-toolkit](https://holodevelopers.slack.com/messages/C2H4HT858) channel on slack.</span></span>

<span data-ttu-id="3557b-266">此專案採用了 [Microsoft 開放原始碼管理辦法](https://opensource.microsoft.com/codeofconduct/)。</span><span class="sxs-lookup"><span data-stu-id="3557b-266">This project has adopted the [Microsoft Open Source Code of Conduct](https://opensource.microsoft.com/codeofconduct/).</span></span>
<span data-ttu-id="3557b-267">如需詳細資訊，請參閱[管理辦法常見問題集](https://opensource.microsoft.com/codeofconduct/faq/)，如有其他問題或意見，請連絡 [opencode@microsoft.com](mailto:opencode@microsoft.com)。</span><span class="sxs-lookup"><span data-stu-id="3557b-267">For more information, see the [Code of Conduct FAQ](https://opensource.microsoft.com/codeofconduct/faq/) or contact [opencode@microsoft.com](mailto:opencode@microsoft.com) with any additional questions or comments.</span></span>

# <a name="useful-resources-on-the-mixed-reality-dev-center"></a><span data-ttu-id="3557b-268">混合現實開發人員中心上的實用資源</span><span class="sxs-lookup"><span data-stu-id="3557b-268">Useful resources on the Mixed Reality Dev Center</span></span>

| <span data-ttu-id="3557b-269">![探索 ](../Images/mrdevcenter/icon-discover.png) [探索](https://docs.microsoft.com/windows/mixed-reality/)</span><span class="sxs-lookup"><span data-stu-id="3557b-269">![Discover](../Images/mrdevcenter/icon-discover.png) [Discover](https://docs.microsoft.com/windows/mixed-reality/)</span></span>| <span data-ttu-id="3557b-270">![設計 ](../Images/mrdevcenter/icon-design.png) [設計](https://docs.microsoft.com/windows/mixed-reality/design)</span><span class="sxs-lookup"><span data-stu-id="3557b-270">![Design](../Images/mrdevcenter/icon-design.png) [Design](https://docs.microsoft.com/windows/mixed-reality/design)</span></span>| <span data-ttu-id="3557b-271">![開發 ](../Images/mrdevcenter/icon-develop.png) [開發](https://docs.microsoft.com/windows/mixed-reality/development)</span><span class="sxs-lookup"><span data-stu-id="3557b-271">![Develop](../Images/mrdevcenter/icon-develop.png) [Develop](https://docs.microsoft.com/windows/mixed-reality/development)</span></span>| <span data-ttu-id="3557b-272">![散發) ](../Images/mrdevcenter/icon-distribute.png) [散發](https://docs.microsoft.com/windows/mixed-reality/implementing-3d-app-launchers)</span><span class="sxs-lookup"><span data-stu-id="3557b-272">![Distribute)](../Images/mrdevcenter/icon-distribute.png) [Distribute](https://docs.microsoft.com/windows/mixed-reality/implementing-3d-app-launchers)</span></span>|
| :--------------------- | :----------------- | :------------------ | :------------------------ |
| <span data-ttu-id="3557b-273">瞭解如何建立 HoloLens 和沉浸式耳機的混合現實體驗 (VR) 。</span><span class="sxs-lookup"><span data-stu-id="3557b-273">Learn to build mixed reality experiences for HoloLens and immersive headsets (VR).</span></span>          | <span data-ttu-id="3557b-274">取得設計指南。</span><span class="sxs-lookup"><span data-stu-id="3557b-274">Get design guides.</span></span> <span data-ttu-id="3557b-275">建立使用者介面。</span><span class="sxs-lookup"><span data-stu-id="3557b-275">Build user interface.</span></span> <span data-ttu-id="3557b-276">瞭解互動和輸入。</span><span class="sxs-lookup"><span data-stu-id="3557b-276">Learn interactions and input.</span></span>     | <span data-ttu-id="3557b-277">取得開發指南。</span><span class="sxs-lookup"><span data-stu-id="3557b-277">Get development guides.</span></span> <span data-ttu-id="3557b-278">學習技術。</span><span class="sxs-lookup"><span data-stu-id="3557b-278">Learn the technology.</span></span> <span data-ttu-id="3557b-279">瞭解科學。</span><span class="sxs-lookup"><span data-stu-id="3557b-279">Understand the science.</span></span>       | <span data-ttu-id="3557b-280">準備好您的應用程式以供其他人使用，並考慮建立 3D 啟動器。</span><span class="sxs-lookup"><span data-stu-id="3557b-280">Get your app ready for others and consider creating a 3D launcher.</span></span> |

# <a name="useful-resources-on-azure"></a><span data-ttu-id="3557b-281">Azure 上的實用資源</span><span class="sxs-lookup"><span data-stu-id="3557b-281">Useful resources on Azure</span></span>

| <span data-ttu-id="3557b-282">![Spatial Anchors](../Images/mrdevcenter/icon-azurespatialanchors.png)</span><span class="sxs-lookup"><span data-stu-id="3557b-282">![Spatial Anchors](../Images/mrdevcenter/icon-azurespatialanchors.png)</span></span><br> [<span data-ttu-id="3557b-283">Spatial Anchors</span><span class="sxs-lookup"><span data-stu-id="3557b-283">Spatial Anchors</span></span>](https://docs.microsoft.com/azure/spatial-anchors/)| <span data-ttu-id="3557b-284">![語音服務](../Images/mrdevcenter/icon-azurespeechservices.png) [語音服務](https://docs.microsoft.com/azure/cognitive-services/speech-service/)</span><span class="sxs-lookup"><span data-stu-id="3557b-284">![Speech Services](../Images/mrdevcenter/icon-azurespeechservices.png) [Speech Services](https://docs.microsoft.com/azure/cognitive-services/speech-service/)</span></span>| <span data-ttu-id="3557b-285">![視覺服務 ](../Images/mrdevcenter/icon-azurevisionservices.png) [視覺服務](https://docs.microsoft.com/azure/cognitive-services/computer-vision/)</span><span class="sxs-lookup"><span data-stu-id="3557b-285">![Vision Services](../Images/mrdevcenter/icon-azurevisionservices.png) [Vision Services](https://docs.microsoft.com/azure/cognitive-services/computer-vision/)</span></span>|
| :------------------------| :--------------------- | :---------------------- |
| <span data-ttu-id="3557b-286">空間錨點是一種跨平臺服務，可讓您使用在一段時間內跨裝置保存其位置的物件，建立混合的現實體驗。</span><span class="sxs-lookup"><span data-stu-id="3557b-286">Spatial Anchors is a cross-platform service that allows you to create Mixed Reality experiences using objects that persist their location across devices over time.</span></span>| <span data-ttu-id="3557b-287">探索及整合 Azure 提供的語音功能，例如語音轉換文字、說話者辨識或語音翻譯至您的應用程式。</span><span class="sxs-lookup"><span data-stu-id="3557b-287">Discover and integrate Azure powered speech capabilities like speech to text, speaker recognition or speech translation into your application.</span></span>| <span data-ttu-id="3557b-288">使用視覺服務識別並分析您的影像或視訊內容，例如電腦視覺、臉部偵測、表情辨識或影片索引器。</span><span class="sxs-lookup"><span data-stu-id="3557b-288">Identify and analyze your image or video content using Vision Services like computer vision, face detection, emotion recognition or video indexer.</span></span> |

# <a name="learn-more-about-the-mrtk-project"></a><span data-ttu-id="3557b-289">深入瞭解 MRTK 專案</span><span class="sxs-lookup"><span data-stu-id="3557b-289">Learn more about the MRTK project</span></span>

<span data-ttu-id="3557b-290">您可以在 [專案管理] 區段下的 [wiki](https://github.com/Microsoft/MixedRealityToolkit-Unity/wiki) 中找到我們的規劃內容。</span><span class="sxs-lookup"><span data-stu-id="3557b-290">You can find our planning material on [our wiki](https://github.com/Microsoft/MixedRealityToolkit-Unity/wiki) under the Project Management Section.</span></span> <span data-ttu-id="3557b-291">您永遠可以在反復專案計劃問題中看到小組正在積極處理的專案。</span><span class="sxs-lookup"><span data-stu-id="3557b-291">You can always see the items the team is actively working on in the Iteration Plan issue.</span></span>

# <a name="how-to-contribute"></a><span data-ttu-id="3557b-292">如何參與</span><span class="sxs-lookup"><span data-stu-id="3557b-292">How to contribute</span></span>

<span data-ttu-id="3557b-293">瞭解您[如何參與 MRTK 的貢獻。](../../Contributing/CONTRIBUTING.md)</span><span class="sxs-lookup"><span data-stu-id="3557b-293">Learn how you can contribute to MRTK at [Contributing](../../Contributing/CONTRIBUTING.md).</span></span>

<span data-ttu-id="3557b-294">**如需混合現實工具組存放庫中所使用之不同分支的詳細資訊，請參閱 [此處的分支指南](https://github.com/Microsoft/MixedRealityToolkit-Unity/wiki/Branch-Guide)。**</span><span class="sxs-lookup"><span data-stu-id="3557b-294">**For details on the different branches used in the Mixed Reality Toolkit repositories, check this [Branch Guide here](https://github.com/Microsoft/MixedRealityToolkit-Unity/wiki/Branch-Guide).**</span></span>
